--- a/style.css
+++ b/style.css
@@ -2,3 +2,40 @@ body{
     font-family: 'Poppins', sans-serif;
     padding-top: 100px;
 }
+h1{
+    font-size: 50px;
+}
+
+
+.header-part{
+    background-color: rgb(3, 5, 5);
+    text-align: center;
+}
+
+.header-part h1{
+    color: #fff;
+}
+
+
+.orange-color{
+    color: orange;
+}
+section{
+    display: flex;
+    margin-bottom: 80px;
+}
+.container{
+    width: 50%;
+    padding-left: 10%;
+}
+.container h2{
+    font-weight: 40px;
+    color: grey;
+    margin-top: 50px;
+}
+.container p{
+    padding-bottom: 50px;
+}
+.container img{
+    width: 80%;
+}
